fix overflowing asset editor field inputs the right way

--- a/resources/css/components/assets.css
+++ b/resources/css/components/assets.css
@@ -187,7 +187,8 @@
     }
 
     .publish-fields {
-        @apply block;
+        @apply grid grid-cols-none!;
+        --grid-columns: none !important;
     }
 }
 
